# todo

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt  run.py  tox.ini
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 045b12e4626a_.py  6377723c1406_create_task_table.py
src/: app.py  cli.py  constants.py  database.py  exceptions.py  settings.py  utils.py
src/backends/: __init__.py  sql_database.py
src/backends/sql_database/: __init__.py  database.py  utils.py
src/backends/sql_database/alembic/: env.py
src/backends/sql_database/alembic/versions/: 6377723c1406_create_task_table.py
src/scripts/: setup_db.py
src/sql_database/: model.py
src/task/: helpers.py  model.py
