[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Gabriel Sarmento <gabrielfs.bot@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
rich = "^10.16.1"
SQLAlchemy = "^1.4.29"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
